# internal/app/rest_api_v2/docs/swagger.yaml
@@ -1742,6 +1742,28 @@ paths:
       summary: List all VMs.
       tags:
       - VMs
+  /vm/all/cache:
+    get:
+      description: 'Get the list of all VMs, including the information about them
+        (cached version).<br>`AUTH`: Both users are allowed.'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/HosterVmUtils.VmApi'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.SwaggerError'
+      security:
+      - BasicAuth: []
+      summary: List all VMs (cached version).
+      tags:
+      - VMs
   /vm/clone:
     post:
       description: 'Clone the VM using it''s name, and optionally specify the snapshot
