# internal/app/rest_api_v2/main.go
@@ -79,6 +79,7 @@ func main() {
 	r.HandleFunc("/api/v2/network/add-new-network", handlers.PostNewNetwork).Methods(http.MethodPost)
 	// VMs
 	r.HandleFunc("/api/v2/vm/all", handlers.VmList).Methods(http.MethodGet)
+	r.HandleFunc("/api/v2/vm/all/cache", handlers.VmListCache).Methods(http.MethodGet)
 	r.HandleFunc("/api/v2/vm/info/{vm_name}", handlers.VmInfo).Methods(http.MethodGet)
 	r.HandleFunc("/api/v2/vm/readme/{vm_name}", handlers.VmGetReadme).Methods(http.MethodGet)
 	r.HandleFunc("/api/v2/vm/start/{vm_name}", handlers.VmStart).Methods(http.MethodPost)
